Add filter for getAll and update swagger
