# src/api/docs/swagger.json
@@ -321,13 +321,21 @@
                     "Tasks"
                 ],
                 "summary": "Get all tasks",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Project's ID to filter tasks",
+                        "name": "project_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/utils.Project"
+                                "$ref": "#/definitions/utils.Task"
                             }
                         }
                     },
@@ -372,7 +380,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Project"
+                            "$ref": "#/definitions/utils.Task"
                         }
                     },
                     "400": {
@@ -422,7 +430,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Project"
+                            "$ref": "#/definitions/utils.Task"
                         }
                     },
                     "422": {
@@ -473,7 +481,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.Project"
+                            "$ref": "#/definitions/utils.Task"
                         }
                     },
                     "400": {
@@ -714,6 +722,55 @@
                         "IN_PROGRESS",
                         "DONE"
                     ]
+                }
+            }
+        },
+        "utils.Task": {
+            "type": "object",
+            "required": [
+                "description",
+                "name",
+                "project_id"
+            ],
+            "properties": {
+                "assigned_to": {
+                    "type": "string"
+                },
+                "creation_date": {
+                    "type": "string",
+                    "example": "2021-12-14T12:41:09.993-04:00"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "task's description"
+                },
+                "estimated_hours": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "task's name"
+                },
+                "project_id": {
+                    "type": "integer"
+                },
+                "start_date": {
+                    "type": "string",
+                    "example": "2021-12-14T12:41:09.993-04:00"
+                },
+                "state": {
+                    "type": "string",
+                    "enum": [
+                        "TODO",
+                        "IN_PROGRESS",
+                        "DONE"
+                    ]
+                },
+                "worked_hours": {
+                    "type": "integer"
                 }
             }
         }
